# Sistema-de-Hotel-em-C

./: Acomodacoes.h  CMakeLists.txt  CategoriaAcomodacoes.h  Codigos.c  Codigos.h  Fornecedores.h  Helper.c  Helper.h  Hospede.h  Hotel.c  Hotel.h  OperacaoAcomodacoes.c  OperacaoAcomodacoes.h  OperacaoCategoriaAcomodacoes.c  OperacaoCategoriaAcomodacoes.h  OperacaoCodigo.c  OperacaoCodigo.h  OperacaoFornecedores.c  OperacaoFornecedores.h  OperacaoHotel.h  OperacaoOperadores.c  OperacaoOperadores.h  OperacaoProdutos.c  OperacaoProdutos.h  Operacaohospede.c  Operacaohospede.h  Operador.h  Produto.h  README.md  Reserva.h  main  main.c  operacaoReserva.c  operacaoReserva.h
